--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-It Works!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Weather</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <p id="temperature"></p>
+  <p id="humidity"></p>
+
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="script.js"></script>
+</body>
+</html>
