--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-  <p id="temperature"></p>
-  <p id="humidity"></p>
+  <p id="temperature">TEMPERATURE: - - °C</p>
+  <p id="humidity">HUMIDITY: - - %</p>
 
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="script.js"></script>
