--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <p id="temperature">TEMPERATURE: - - °C</p>
   <p id="humidity">HUMIDITY: - - %</p>
 
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
