--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <p id="temperature">TEMPERATURE: - - °C</p>
   <p id="humidity">HUMIDITY: - - %</p>
 
+  <footer></footer>
+  
   <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="script.js"></script>
 </body>
