--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <p id="temperature">TEMPERATURE: - - °C</p>
   <p id="humidity">HUMIDITY: - - %</p>
 
-  <footer></footer>
-  
+  <footer>
+    TEST
+  </footer>
+
   <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="script.js"></script>
 </body>
