--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </footer>
 
   <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
