Changing the footer style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p id="humidity">HUMIDITY: - - %</p>
 
   <footer>
-    TEST
+    Last updated: <span></span>
   </footer>
 
   <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
