Adding Html code for a space

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p id="humidity">HUMIDITY: - - %</p>
 
   <footer>
-    Last updated: <span></span>
+    Last updated:&nbsp <span></span> <!-- &nbsp for the space: HTML doesn't count a space before a tag -->
   </footer>
 
   <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
