--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Weather</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/octicons/octicons.css">
 </head>
 <body>
 
@@ -12,6 +13,9 @@
 
   <footer>
     Last updated:&nbsp <span></span> <!-- &nbsp for the space: HTML doesn't count a space before a tag -->
+    <a href="https://github.com/Edmeral/arduino-weather-station">
+      <div class="ico"><span class="octicon octicon-mark-github"></span></div>
+    </a>
   </footer>
 
   <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
