--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 
   <footer>
     Last updated:&nbsp <span></span> <!-- &nbsp for the space: HTML doesn't count a space before a tag -->
-    <a href="https://github.com/Edmeral/arduino-weather-station">
-      <div class="ico"><span class="octicon octicon-mark-github"></span></div>
+    <a href="#" class="ico">?</a>
+    <a href="#" class="ico">
+      <span class="octicon octicon-location"></span>
+    </a>
+    <a href="https://github.com/Edmeral/arduino-weather-station" class="ico">
+      <span class="octicon octicon-mark-github"></span>
     </a>
   </footer>
 
