--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <footer>
     Last updated:&nbsp <span></span> <!-- &nbsp for the space: HTML doesn't count a space before a tag -->
-    <a href="#" class="ico">?</a>
-    <a href="#" class="ico">
+    <a href="#" class="ico" title="What is this?">?</a>
+    <a href="#" class="ico" title="Where is this?">
       <span class="octicon octicon-location"></span>
     </a>
     <a href="https://github.com/Edmeral/arduino-weather-station" class="ico">
