Changing css link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Weather</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="/octicons/octicons.css">
+  <link rel="stylesheet" href="octicons/octicons.css">
 </head>
 <body>
 
@@ -21,7 +21,8 @@
       <span class="octicon octicon-mark-github"></span>
     </a>
   </footer>
-
+  
+  <!-- Google Anlytics here -->
   <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
   <script src="script.js"></script>
