--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
     
   </footer>
   
-  <!-- Google Anlytics here -->
+  <!-- Google Analytics here -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-8667639-8', 'auto');
+    ga('send', 'pageview');
+
+  </script>
   <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
   <script src="script.js"></script>
