Adding title to link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#" class="ico" title="Where is this?">
         <span class="octicon octicon-location"></span>
       </a>
-      <a href="https://github.com/Edmeral/arduino-weather-station" class="ico">
+      <a href="https://github.com/Edmeral/arduino-weather-station" class="ico" title="Github repository">
         <span class="octicon octicon-mark-github"></span>
       </a>
     </div>
