Changing a link title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     Last updated:&nbsp <span></span> <!-- &nbsp for the space: HTML doesn't count a space before a tag -->
     <div class="icons-container">
       <a href="#" class="ico" title="What is this?">?</a>
-      <a href="#" class="ico" title="Where is this?">
+      <a href="#" class="ico" title="The location of these measurements">
         <span class="octicon octicon-location"></span>
       </a>
       <a href="https://github.com/Edmeral/arduino-weather-station" class="ico" title="Github repository">
