--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <footer>
     Last updated:&nbsp <span></span> <!-- &nbsp for the space: HTML doesn't count a space before a tag -->
     <div class="icons-container">
-      <a href="#" class="ico" title="What is this?">?</a>
-      <a href="#" class="ico" title="The location of these measurements">
+      <a href="#" id="what-ico" class="ico" title="What is this?">?</a>
+      <a href="#" id="where-ico" class="ico" title="The location of these measurements">
         <span class="octicon octicon-location"></span>
       </a>
-      <a href="https://github.com/Edmeral/arduino-weather-station" class="ico" title="Github repository">
+      <a href="https://github.com/Edmeral/arduino-weather-station" id="github-ico" class="ico" title="Github repository">
         <span class="octicon octicon-mark-github"></span>
       </a>
     </div>
