--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Weather</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="octicons/octicons.css">
