--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
   </script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
+  <script src="favico.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
