Using async in the script tag

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     ga('send', 'pageview');
 
   </script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
-  <script src="favico.min.js"></script>
-  <script src="script.js"></script>
+  <script async src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
+  <script async src="favico.min.js"></script>
+  <script async src="script.js"></script>
 </body>
 </html>
