--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Weather</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="octicons/octicons.css">
+  <link rel="shortcut icon" type="image/png" href="favicon.ico">
 </head>
 <body>
 
