--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <footer>
     Last updated:&nbsp <span></span> <!-- &nbsp for the space: HTML doesn't count a space before a tag -->
     <div class="icons-container">
-      <a href="#" id="what-ico" class="ico" title="What is this?">?</a>
-      <a href="#" id="where-ico" class="ico" title="The location of these measurements">
+      <a href="https://github.com/Edmeral/weather#readme" id="what-ico" class="ico" title="About this project">?</a>
+      <a href="https://www.google.com/maps/@33.8841339,-5.562759,12z" id="where-ico" class="ico" title="The location of these measurements">
         <span class="octicon octicon-location"></span>
       </a>
       <a href="https://github.com/Edmeral/arduino-weather-station" id="github-ico" class="ico" title="Github repository">
